# dfint64_patch

./: .coveragerc  .extract.yaml.example  .flake8  .gitignore  .gitmodules  .travis.yml  LICENSE.md  README.md  pyproject.toml  requirements  setup.py
.github/: dependabot.yml
.github/workflows/: draft-release.yml  python-package.yml  pythonpackage.yml  test.yml
dfint64_patch/: backup.py  binio.py  config.py  patch.py  patching.py  type_aliases.py  utils.py
dfint64_patch/charmap/: cli.py  patch_charmap.py  search_charmap.py
dfint64_patch/cross_references/: cross_references_relative.py
dfint64_patch/dictionary_loaders/: csv_loader.py
dfint64_patch/extract_strings/: cli.py  from_raw_bytes.py
dfint64_patch/extract_subroutines/: from_raw_bytes.py
dfint64_patch/patching/: cli.py  patch.py
dfint64_patch/strings_context/: extract_strings_graphs.py  extract_strings_with_subs.py
dfint64_patch/tracing/: trace.py
dfrus64/: __init__.py  binio.py  cross_references.py  extract_strings.py  extract_strings64.py  patch.py  patch_charmap.py  search_charmap.py  type_aliases.py
dfrus64/charmap/: cli.py  patch_charmap.py  search_charmap.py
dfrus64/cross_references/: cross_references_relative.py
dfrus64/dictionary_loaders/: csv_loader.py
dfrus64/extract_strings/: cli.py  extract_strings.py  from_raw_bytes.py
tests/: Makefile  conftest.py  macros.inc  test64.asm  test_binio.py  test_cross_refernces.py  test_csv_loader.py  test_extract_strings.py  test_extract_subroutines.py  test_patch.py  test_patch_charmap.py  test_search_charmap.py  utils.py
